--- a/ColorMyViews/app/src/main/res/values/strings.xml
+++ b/ColorMyViews/app/src/main/res/values/strings.xml
@@ -5,4 +5,11 @@
     <string name="box_three">Box Three</string>
     <string name="box_four">Box Four</string>
     <string name="box_five">Box Five</string>
+
+    <string name="how_to_play">How to play</string>
+    <string name="instructions">Tap the screen or the buttons</string>
+    <string name="button_red">RED</string>
+    <string name="button_yellow">YELLOW</string>
+    <string name="button_black">BLACK</string>
+
 </resources>
